# three_tier_grpc

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: jaeger.yml
docker/: Dockerfile
frontend/: Dockerfile  go.mod  go.sum  main.go
frontend/frontend/: go.mod  go.sum  helloworld.pb.go  main.go
protos/: helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.proto
scripts/: auto.py  docker-compose_gen.py  nohup.out  pass_data_ath-8.pkl  pin_core.py  proto_gen.py  read_metrics.py  run_batch.py  run_exp.py  src_files_gen.py  transfer_grpc.cpp  transfer_grpc_local.cpp  transfer_grpc_parallel.cpp  transfer_template.cpp
src/: greeter_async_client.cpp  tracing.h
src/service_0/: CMakeLists.txt  service_0.cpp
src/service_1/: CMakeLists.txt  service_1.cpp
src/service_2/: CMakeLists.txt  service_2.cpp
src/service_3/: CMakeLists.txt  service_3.cpp
wrk2/: wrk
